--- a/index.html
+++ b/index.html
@@ -10,81 +10,84 @@
         <link href="static/css/bootstrap.min.css" rel="stylesheet">
         <link href="static/css/main.css" rel="stylesheet">
 
+        <!-- OWL Carousel -->
+        <link rel="stylesheet" href="static/css/owl.carousel.css">
+        <link rel="stylesheet" href="static/css/owl.theme.css">
+
+        <!-- Smart Menu -->
+        <link rel="stylesheet" href="static/css/jquery.smartmenus.bootstrap.css">
+
         <!-- FONTS -->
-        <!--
-        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700' rel='stylesheet' type='text/css'>
-        -->
         <link href='https://fonts.googleapis.com/css?family=Exo+2:400,400italic,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
         <header>
-            <div class="container-background">
-                <nav class="container">
-                    <ul class="pull-right">
-                        <li>
-                            <a class="active" href="">Accueil</a>
-                        </li>
-                        <li>
-                            <a href="">Actualités</a>
-                        </li>
-                        <li>
-                            <a href="">L'Église copte <span class="caret"></span></a>
-                            <div class="sub-nav">
-                                <ul>
-                                    <li><a href="">Lorem ipsum dolor sit amet</a></li>
-                                    <li><a class="active" href="">Consectetur</a></li>
-                                    <li><a href="">Quisque dui lacus</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="">Notre Église <span class="caret"></span></a>
-                            <div class="sub-nav">
-                                <ul>
-                                    <li><a href="">Lorem ipsum dolor sit amet</a></li>
-                                    <li><a class="active" href="">Consectetur</a></li>
-                                    <li><a href="">Quisque dui lacus</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="">Multimédia <span class="caret"></span></a>
-                            <div class="sub-nav">
-                                <ul>
-                                    <li><a href="">Lorem ipsum dolor sit amet</a></li>
-                                    <li><a class="active" href="">Consectetur</a></li>
-                                    <li><a href="">Quisque dui lacus</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="">Contact</a>
-                        </li>
-                        <li>
-                            <a href="">Liens <span class="caret"></span></a>
-                            <div class="sub-nav">
-                                <ul>
-                                    <li><a href="">Lorem ipsum dolor sit amet</a></li>
-                                    <li><a class="active" href="">Consectetur</a></li>
-                                    <li><a href="">Quisque dui lacus</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="">Live</a>
-                        </li>
-                    </ul>
-                    <div class="logo">
-                        Arc. Michel & St. Georges
+            <div class="container">
+                <div class="navbar navbar-default" role="navigation">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+
+                        <a class="navbar-brand" href="#">
+                            <img alt="" src="static/img/logo.png" style="width: 50px;" />
+                        </a>
                     </div>
-                </nav>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#">Accueil</a></li>
+                            <li><a href="#">Actualités</a></li>
+                            <li>
+                                <a href="#">L'Eglise copte <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Sa Sainteté le Pape Chénouda III</a></li>
+                                    <li><a href="#">Sa Sainteté le Pape Tawadros II</a></li>
+                                    <li><a href="#">Histoire de l'église copte <span class="caret"></span></a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="#">Introduction</a></li>
+                                            <li><a href="#">Saint Marc</a></li>
+                                            <li><a href="#">A long sub menu <span class="caret"></span></a>
+                                                <ul class="dropdown-menu">
+                                                    <li><a href="#">Action</a></li>
+                                                    <li><a href="#">Something else here</a></li>
+                                                    <li class="disabled"><a class="disabled" href="#">Disabled item</a></li>
+                                                    <li><a href="#">One more link</a></li>
+                                                    <li><a href="#">Menu item 1</a></li>
+                                                    <li><a href="#">Menu item 2</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">Another link</a></li>
+                                            <li><a href="#">One more link</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Notre Eglise</a></li>
+                            <li><a href="#">Multimédia</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Liens</a></li>
+                            <li><a href="#">Live</a></li>
+                        </ul>
+
+                    </div>
+                </div>
+
+                <div id="owl-carousel" class="owl-carousel">
+                    <div><img alt="" src="static/img/fullimage1.jpg" /></div>
+                    <div><img alt="" src="static/img/fullimage3.jpg" /></div>
+                    <div><img alt="" src="static/img/fullimage4.jpg" /></div>
+                    <div><img alt="" src="static/img/fullimage5.jpg" /></div>
+                    <div><img alt="" src="static/img/fullimage6.jpg" /></div>
+                    <div><img alt="" src="static/img/fullimage7.jpg" /></div>
+                </div>
             </div>
         </header>
 
         <div class="container">
-
             <div class="col-lg-12">
                 <ol class="breadcrumb">
                     <li><a href="#">Accueil</a></li>
@@ -174,6 +177,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="static/js/bootstrap.min.js"></script>
+        <script src="static/js/owl.carousel.min.js"></script>
+        <script src="static/js/jquery.smartmenus.min.js"></script>
+        <script src="static/js/jquery.smartmenus.bootstrap.min.js"></script>
         <script src="static/js/main.js"></script>
     </body>
 </html>
