Ajout des images pour le slider

--- a/index.html
+++ b/index.html
@@ -77,12 +77,23 @@
                 </div>
 
                 <div id="owl-carousel" class="owl-carousel">
-                    <div><img alt="" src="static/img/fullimage1.jpg" /></div>
-                    <div><img alt="" src="static/img/fullimage3.jpg" /></div>
-                    <div><img alt="" src="static/img/fullimage4.jpg" /></div>
-                    <div><img alt="" src="static/img/fullimage5.jpg" /></div>
-                    <div><img alt="" src="static/img/fullimage6.jpg" /></div>
-                    <div><img alt="" src="static/img/fullimage7.jpg" /></div>
+                    <div><img alt="" src="static/img/1.jpg" /></div>
+                    <div><img alt="" src="static/img/2.gif" /></div>
+                    <div><img alt="" src="static/img/3.jpg" /></div>
+                    <div><img alt="" src="static/img/4.jpg" /></div>
+                    <div><img alt="" src="static/img/5.jpg" /></div>
+                    <div><img alt="" src="static/img/6.jpg" /></div>
+                    <div><img alt="" src="static/img/7.jpg" /></div>
+                    <div><img alt="" src="static/img/8.jpg" /></div>
+                    <div><img alt="" src="static/img/9.jpg" /></div>
+                    <div><img alt="" src="static/img/10.jpg" /></div>
+                    <div><img alt="" src="static/img/11.jpg" /></div>
+                    <div><img alt="" src="static/img/12.jpg" /></div>
+                    <div><img alt="" src="static/img/13.jpg" /></div>
+                    <div><img alt="" src="static/img/14.gif" /></div>
+                    <div><img alt="" src="static/img/15.jpg" /></div>
+                    <div><img alt="" src="static/img/16.jpg" /></div>
+                    <div><img alt="" src="static/img/17.jpg" /></div>
                 </div>
             </div>
         </header>
