--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
 
             <div class="col-lg-3">
-                <h1>Autre</h1>
+                <h1>Autres</h1>
                 <h3>Verset du jour</h3>
                 <p>
                     « Je me tiens à la porte et Je frappe. Si quelqu'un entend Ma voix et ouvre la porte, J'entrerai chez lui et Je prendrai la cène avec lui et lui avec Moi. »
