--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="static/css/jquery.smartmenus.bootstrap.css">
 
         <!-- FONTS -->
+        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Exo+2:400,400italic,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
@@ -33,8 +34,9 @@
                             <span class="icon-bar"></span>
                         </button>
 
-                        <a class="navbar-brand" href="#">
-                            <img alt="" src="static/img/logo.png" style="width: 50px;" />
+                        <a class="navbar-brand logo" href="#">
+                            St Michel & St Georges
+<!--                            <img alt="" src="static/img/logo.png" />-->
                         </a>
                     </div>
                     <div class="navbar-collapse collapse">
@@ -77,23 +79,15 @@
                 </div>
 
                 <div id="owl-carousel" class="owl-carousel">
-                    <div><img alt="" src="static/img/1.jpg" /></div>
-                    <div><img alt="" src="static/img/2.gif" /></div>
-                    <div><img alt="" src="static/img/3.jpg" /></div>
-                    <div><img alt="" src="static/img/4.jpg" /></div>
-                    <div><img alt="" src="static/img/5.jpg" /></div>
-                    <div><img alt="" src="static/img/6.jpg" /></div>
-                    <div><img alt="" src="static/img/7.jpg" /></div>
-                    <div><img alt="" src="static/img/8.jpg" /></div>
-                    <div><img alt="" src="static/img/9.jpg" /></div>
-                    <div><img alt="" src="static/img/10.jpg" /></div>
-                    <div><img alt="" src="static/img/11.jpg" /></div>
-                    <div><img alt="" src="static/img/12.jpg" /></div>
-                    <div><img alt="" src="static/img/13.jpg" /></div>
-                    <div><img alt="" src="static/img/14.gif" /></div>
-                    <div><img alt="" src="static/img/15.jpg" /></div>
-                    <div><img alt="" src="static/img/16.jpg" /></div>
-                    <div><img alt="" src="static/img/17.jpg" /></div>
+                    <div><img alt="" src="static/img/1.png" /></div>
+                    <div><img alt="" src="static/img/2.png" /></div>
+                    <div><img alt="" src="static/img/3.png" /></div>
+                    <div><img alt="" src="static/img/4.png" /></div>
+                    <div><img alt="" src="static/img/5.png" /></div>
+                    <div><img alt="" src="static/img/6.png" /></div>
+                    <div><img alt="" src="static/img/7.png" /></div>
+                    <div><img alt="" src="static/img/8.png" /></div>
+                    <div><img alt="" src="static/img/9.png" /></div>
                 </div>
             </div>
         </header>
