--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                 </div>
 
                 <div id="owl-carousel" class="owl-carousel">
-                    <div><img alt="" src="static/img/1.png" /></div>
-                    <div><img alt="" src="static/img/2.png" /></div>
-                    <div><img alt="" src="static/img/3.png" /></div>
-                    <div><img alt="" src="static/img/4.png" /></div>
-                    <div><img alt="" src="static/img/5.png" /></div>
-                    <div><img alt="" src="static/img/6.png" /></div>
-                    <div><img alt="" src="static/img/7.png" /></div>
-                    <div><img alt="" src="static/img/8.png" /></div>
-                    <div><img alt="" src="static/img/9.png" /></div>
+                    <div><img alt="" src="static/img/1.PNG" /></div>
+                    <div><img alt="" src="static/img/2.PNG" /></div>
+                    <div><img alt="" src="static/img/3.PNG" /></div>
+                    <div><img alt="" src="static/img/4.PNG" /></div>
+                    <div><img alt="" src="static/img/5.PNG" /></div>
+                    <div><img alt="" src="static/img/6.PNG" /></div>
+                    <div><img alt="" src="static/img/7.PNG" /></div>
+                    <div><img alt="" src="static/img/8.PNG" /></div>
+                    <div><img alt="" src="static/img/9.PNG" /></div>
                 </div>
             </div>
         </header>
