--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                         <a class="navbar-brand logo" href="#">
                             St Michel & St Georges
-<!--                            <img alt="" src="static/img/logo.png" />-->
+                            <!--                            <img alt="" src="static/img/logo.png" />-->
                         </a>
                     </div>
                     <div class="navbar-collapse collapse">
@@ -78,17 +78,30 @@
                     </div>
                 </div>
 
-                <div id="owl-carousel" class="owl-carousel">
-                    <div><img alt="" src="static/img/1.PNG" /></div>
-                    <div><img alt="" src="static/img/2.PNG" /></div>
-                    <div><img alt="" src="static/img/3.PNG" /></div>
-                    <div><img alt="" src="static/img/4.PNG" /></div>
-                    <div><img alt="" src="static/img/5.PNG" /></div>
-                    <div><img alt="" src="static/img/6.PNG" /></div>
-                    <div><img alt="" src="static/img/7.PNG" /></div>
-                    <div><img alt="" src="static/img/8.PNG" /></div>
-                    <div><img alt="" src="static/img/9.PNG" /></div>
+                <div class="container">
+                    <div class="col-lg-3">
+                        <div class="logo-img">
+                            <img alt="" src="static/img/logo.png" />
+                        </div>
+                    </div>
+                    <div class="col-lg-9 title-description">
+                        <h3 style="font-style: italic;">Accueil - Eglise Archange Michel et Saint Georges</h3>
+                        <p>Bonjour et bienvenue sur le site de l'église copte du Val de Marne. Voici une petite description de la page sur laquelle vous vous trouvez.</p>
+                    </div>
                 </div>
+
+
+                <!--                <div id="owl-carousel" class="owl-carousel">
+                                    <div><img alt="" src="static/img/1.PNG" /></div>
+                                    <div><img alt="" src="static/img/2.PNG" /></div>
+                                    <div><img alt="" src="static/img/3.PNG" /></div>
+                                    <div><img alt="" src="static/img/4.PNG" /></div>
+                                    <div><img alt="" src="static/img/5.PNG" /></div>
+                                    <div><img alt="" src="static/img/6.PNG" /></div>
+                                    <div><img alt="" src="static/img/7.PNG" /></div>
+                                    <div><img alt="" src="static/img/8.PNG" /></div>
+                                    <div><img alt="" src="static/img/9.PNG" /></div>
+                                </div>-->
             </div>
         </header>
 
